assets/styles/wall.css
/* ... */
.row-1-gap {
    margin-top: 1em;
}

.row-2 {
    justify-content: center;
    display: flex;
}

.row-2 > label {
    text-align: center;
    margin: 0.8em 0;
    font-size: 14px;
    font-weight: 400;
    padding-top: 3px;
}

.row-3 {
    justify-content: center;
    display: flex;
}

.row-4 {
    margin-top: 0.2em;
    justify-content: center;
    display: flex;
    padding: 5px 0;
}
.row-5{
    justify-content: flex-start;
    display: flex;
    padding: 5px 0;
    margin-top: 0.2em;
}
.row-4 > button {
    flex-direction: row;
    width: 30%;
    margin: 0 0.4em;
}


.field-header {
    /*border: 1px solid lightgray;*/
    /*color: gray;*/
    margin: 0 0.8em;
    border-radius: 5px;
    width: 50%;

}
.notice-timestamp{
    font-size: 10px;
    display: flex;
    justify-content:flex-end;
    margin: 0 0.8em;
    border-radius: 5px;

}

.input-field-title {
    width: 100%;
    height: 25px;
    background: white;
    border: 1px solid lightgray;
    border-radius: 5px;

    font-family: "Nunito", serif;
    margin: 0 0.8em;
    display: flex;
    justify-content:flex-start;
}

.notice-title{
    border: none;
    display: flex;
    justify-content:center;
    font-weight: 600;
}

.input-field-title:hover, .field-header:hover, .create-notice-text:hover, .create-post-title:hover,
.create-post-text:hover, .field-hover:hover {
    border-color: #ffccc7;
}

.input-field-message {
    width: 100%;
    height: 100px;
    background: white;
    border: 1px solid lightgray;
    border-radius: 5px;
    color: gray;
    font-family: "Nunito", serif;
    text-align: center;
    margin: 0 0.8em;
}

.notice-box {
    border: 1px solid lightgray;
    box-shadow: 1px 2px 4px lightgray;
    border-radius: 10px;
    transition: all ease-in-out 0.5s;
    display: flex;
    flex-direction: column;
    padding: 3px;
    margin: 0.8em 0;
}

.notice-content {
    min-height: 100%;
    margin: 0 0.8em;
    border-radius: 5px;
    display: flex;
    justify-content: center;
    font-size: 0.9em;
    text-align: justify;
    word-wrap: break-word;
}

.star-div-off {
    display: block;
    color: gray;
    margin: 0 0.8em;
    cursor: pointer;
}

.star-div-on {
    color: rgb(255, 115, 0);
    margin: 0 0.8em;
}

.edit-btn:hover {
    background: #fa8c16;
    border: 1px solid #fa8c16;
    color: white;
}

.dlt-btn:hover {
    background: #f5222d;
    border: 1px solid #f5222d;
    color: white;
}

.image-box {
    background: white;
    border: 1px solid lightgray;
    border-radius: 5px;
    color: gray;
    height: 150px;
    width: 500px;
    align-items: center;
    margin: 0 0.8em;
    object-fit: scale-down;
}

.image-box-notice {
    background: white;
    /*border: 1px solid lightgray;*/
    border-radius: 5px;
    color: gray;
    height:auto;
    min-width: 100%;
}

.img-wrapBox{
    display: flex;
    padding: 0.8em;
}

.box-row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.create-post-box {
    border: 1px solid lightgray;
    box-shadow: 1px 2px 4px lightgray;
    border-radius: 10px;
    transition: all ease-in-out 0.5s;
    display: none;
    flex-direction: column;
    flex-grow: 1;
    margin: 0.8em 3px;
}

.row-0 {
    display: flex;
    flex-direction: row;
}

.wall-top-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.wall-top-row > p {
    margin-left: 18em;
}

.create-post-button {
    width: 100px;
    margin-top: 0.4em;
    margin-left: 20em;
}

.create-post-button:hover {
    background: #237804;
    border-color: #237804;
    color: white;
}

.create-post-title {
    margin: 0.8em;
    text-align: center;
    background: white;
    border: 1px solid lightgray;
    border-radius: 5px;
    color: gray;
    font-family: "Nunito", serif;
}

.create-post-text {
    resize: none;
    width: 120%;
    height: 150px;
    margin: 0 0.8em;
    border: 1px solid lightgray;
    border-radius: 5px;
    padding: 10px;
    text-align: center;
}

.create-post-buttons {
    margin: 0.8em;
    display: flex;
    justify-content: flex-end;
}

.create-post-buttons > button {
    width: 120px;
    margin: 0.2em;
}

.post-report {
    box-shadow: 1px 2px 4px lightgray;
    border: 1px solid lightgray;
    display: none;
    flex-direction: column;
    margin: 0.8em auto;
    width: 60%;
    height: 20%;
    border-radius: 5px;
    padding: 3px;
}

.report-txt {
    resize: none;
    width: 96%;
    height: 10em;
    margin: 0 0.8em;
    border: 1px solid lightgray;
    border-radius: 5px;
    padding: 10px;
    text-align: center;
}

.input-field-report {
    height: 100px;
    background: white;
    border: 1px solid lightgray;
    border-radius: 10px;
    color: gray;
    font-family: "Nunito", serif;
    text-align: center;
    margin: 0 0.8em;
}

.comment-report {
    box-shadow: 1px 2px 4px lightgray;
    border: 1px solid lightgray;
    margin: 0.8em auto;
    display: none;
    flex-direction: column;
    width: 60%;
    height: 50%;
    border-radius: 5px;
    padding: 3px;
}

.filter-left {
    display: flex;
    flex-direction: row;
    width: 35%;
}

.filter-left > button {
    margin: 0 3px;
}

.filter-left > input {
    width: 120px;
    margin: 0 0.2em;
}

.filter-right {
    display: flex;
    flex-direction: row;
    width: 40%;
}

.filter-right > button {
    margin: 0 3px;
}

.post-box {
    box-shadow: 1px 2px 4px lightgray;
    border: 1px solid lightgray;
    display: flex;
    flex-direction: column;
    border-radius: 10px;
    margin-bottom: 0.8em;
}
/* ... */

